--- a/index.html
+++ b/index.html
@@ -9,18 +9,9 @@
     />
 
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
+  
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
@@ -46,69 +37,78 @@
       does not mis-format this specific file
     -->
     <!-- prettier-ignore -->
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Your go-to digital agency
-    Significa is a digital design-led agency mainly focused on Product Development.
-    Oopsie for users — Your favourite food, one click away!
-    Business Analysis, Product Management, Consultancy & 5 others
-    Opennode — Bitcoin, for everyday.
-    UI/UX, Front End, Front End
-    AKASHA — Open systems to expand our collective mind.
-    UI/UX, Front End, Illustration
-    We build digital products
-    Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.
-    Strategy
-    UX research
-    Business strategy
-    Brand strategy
-    Product strategy
-    Product management
-    Product design
-    Product design
-    User experience
-    User interface
-    Brand development
-    Illustration
-    Motion & Video
-    Development
-    Development
-    Front-end engineering
-    Web-app development
-    Native app development
-    Development operations
-    View services
-    View services
-    What's new on Significa Labs
-    Automating releases for UI Kits — How to automate release logs and builds for your style guides
-    Tutorial on Medium
-    An iceberg sank the Titanic — But what’s that got to do with text hierarchy?
-    Article on Medium
-    On creating synergies — Sharing without compromising our identity
-    Article on Medium
-    Enter the Lab
-    Drop by, we're hiring.
-    We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to.
-    View careers
-    Legal © 2019
-    Say
-    hello@significa.co
-    (+351) 226 001 751
-    Links
-    Home
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Network
-    Coletiv
-    Adamant
+  </head>
+  <body>
+
+    <header>
+      <img src="/images/logo.svg" alt="Significa-Logo">
+      <nav class="navbar navbar-fixed-top">
+        <ul>
+          <li>Showcase</li>
+          <li>Services</li>
+          <li>About</li>
+          <li>Careers</li>
+          <li>Labs</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+
+    <!--Hero 12-->
+    <section class="container-fluid herostage">
+    <div class="jumbotron jumbotron-fluid col-8">
+      <div class="container-fluid">
+        <h1 class="display-4">Your go-to digital agency</h1>
+      </div>
+      <div class="container-fluid">
+        <h4 class="lead">Significa is a digital design-led agency mainly
+          focused on Product Development.</h4>
+      </div>
+    </div>
+
+    </section>
+    <!--Image Teaser 6/6-->
+    <section></section>
+
+    <!--Textblock 4/8-->
+    <section></section>
+
+    <!--Text Teaser 4/4/4-->
+    <section></section>
+
+    <!--Textblock List Black 4/8-->
+    <section></section>
+
+    <!--Textblock 4/8-->
+    <section></section>
+
+    <!--Image Teaser 6/6-->
+    <section></section>
+
+    <!--Footer-->
+    <footer></footer>
+
+      Oopsie for users — Your favourite food, one
+    click away! Business Analysis, Product Management, Consultancy & 5 others
+    Opennode — Bitcoin, for everyday. UI/UX, Front End, Front End AKASHA — Open
+    systems to expand our collective mind. UI/UX, Front End, Illustration We
+    build digital products Having a design-led approach to what we do defines
+    who we are. We take on products from inception to launch, from business
+    model to people's pocket, from wireframe to continuous deployment. Strategy
+    UX research Business strategy Brand strategy Product strategy Product
+    management Product design Product design User experience User interface
+    Brand development Illustration Motion & Video Development Development
+    Front-end engineering Web-app development Native app development Development
+    operations View services View services What's new on Significa Labs
+    Automating releases for UI Kits — How to automate release logs and builds
+    for your style guides Tutorial on Medium An iceberg sank the Titanic — But
+    what’s that got to do with text hierarchy? Article on Medium On creating
+    synergies — Sharing without compromising our identity Article on Medium
+    Enter the Lab Drop by, we're hiring. We are an open-minded, open-hearted
+    team that loves the thrill of creating exciting new projects. Drop us a line
+    if you’re passionate and talented to do everything you set your mind to.
+    View careers Legal © 2019 Say hello@significa.co (+351) 226 001 751 Links
+    Home Showcase Services About Careers Labs Contact Network Coletiv Adamant
     Follow us
   </body>
 </html>
