done basics. Issue with change font size due to bootstrap presets. All exkl. footer & nav

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
-  
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+   
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
@@ -39,9 +40,8 @@
     <!-- prettier-ignore -->
   </head>
   <body>
-
     <header>
-      <img src="/images/logo.svg" alt="Significa-Logo">
+      <img src="/images/logo.svg" alt="Significa-Logo" />
       <nav class="navbar navbar-fixed-top">
         <ul>
           <li>Showcase</li>
@@ -56,59 +56,138 @@
 
     <!--Hero 12-->
     <section class="container-fluid herostage">
-    <div class="jumbotron jumbotron-fluid col-8">
-      <div class="container-fluid">
-        <h1 class="display-4">Your go-to digital agency</h1>
+      <div class="jumbotron jumbotron-fluid">
+        <div>
+          <h1 class="display-4 col-4">Your go-to digital agency</h1>
+        </div>
+        <div>
+          <h4 class="lead col-6">
+            Significa is a digital design-led agency mainly focused on Product
+            Development.
+          </h4>
+        </div>
       </div>
-      <div class="container-fluid">
-        <h4 class="lead">Significa is a digital design-led agency mainly
-          focused on Product Development.</h4>
+    </section>
+
+
+    <!--Image Teaser 4/4/4-->
+    <section class="container-fluid image-teaser">
+      <div class="card-group">
+        <div class="card">
+          <div class="shadow p-3 mb-5 bg-white rounded" id="delete-padding">    
+          <img src="/images/Oopsie.png" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Oopsie for users — Your favourite food, one click away!</h5>
+            <p class="card-text">Business Analysis,
+              Product Management, Consultancy & 5 others</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/images/Opennode.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Opencode — Bitcoin, for everyday.</h5>
+            <p class="card-text">UI/UX, Front End, Front End</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/images/Akasha.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">AKASHA — Open systems to expand our collective
+              mind.</h5>
+            <p class="card-text">UI/UX, Front End, Illustration</p>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+     
+     W
+    <!--Textblock 4/8-->
+    <section class="container-fluid textblock">
+      <div class="jumbotron jumbotron-fluid">
+        <div>
+          <h3 class="display-4 col-4">We build digital products</h3>
+        </div>
+        <div class="col-7">
+          <h4 class="lead col">
+            Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.
+          </h4>
+        </div>
+      </div>
 
     </section>
-    <!--Image Teaser 6/6-->
-    <section></section>
-
-    <!--Textblock 4/8-->
-    <section></section>
-
     <!--Text Teaser 4/4/4-->
-    <section></section>
-
+    <section class="container-fluid text-teaser">
+      <div class="card-group">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Strategy</h5>
+            <ul class="card-text">
+              <il> <i>– </i>UX research</il>
+              <il> <i>– </i>Business strategy</il>
+              <il> <i>– </i>Brand strategy</il>
+              <il> <i>– </i>Product strategy</il>
+              <il> <i>– </i>Product management</il>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Product design</h5>
+            <ul class="card-text">
+              <il> <i>– </i>User experience</il>
+              <il> <i>– </i>User interface</il>
+              <il> <i>– </i>Brand development</il>
+              <il> <i>– </i>Illustration</il>
+              <il> <i>– </i>Motion & Video</il>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Development</h5>
+            <ul class="card-text">
+              <il> <i>– </i>Front-end engineering</il>
+              <il> <i>– </i>Web-app development</il>
+              <il> <i>– </i>Native-app developmen</il>
+              <il> <i>– </i>Development operations</il>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="cta-link">
+        <a href="http://">View services <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+        </svg>
+        
+        </a>
+      </div>
+    </section>
     <!--Textblock List Black 4/8-->
-    <section></section>
-
+    <section class="container-fluid">
+    </section>
     <!--Textblock 4/8-->
-    <section></section>
+    <sectio class="container-fluid">
+    </section>
 
     <!--Image Teaser 6/6-->
-    <section></section>
+    <section class="container-fluid">
+
+    </section>
 
     <!--Footer-->
     <footer></footer>
 
-      Oopsie for users — Your favourite food, one
-    click away! Business Analysis, Product Management, Consultancy & 5 others
-    Opennode — Bitcoin, for everyday. UI/UX, Front End, Front End AKASHA — Open
-    systems to expand our collective mind. UI/UX, Front End, Illustration We
-    build digital products Having a design-led approach to what we do defines
-    who we are. We take on products from inception to launch, from business
-    model to people's pocket, from wireframe to continuous deployment. Strategy
-    UX research Business strategy Brand strategy Product strategy Product
-    management Product design Product design User experience User interface
-    Brand development Illustration Motion & Video Development Development
-    Front-end engineering Web-app development Native app development Development
-    operations View services View services What's new on Significa Labs
-    Automating releases for UI Kits — How to automate release logs and builds
-    for your style guides Tutorial on Medium An iceberg sank the Titanic — But
-    what’s that got to do with text hierarchy? Article on Medium On creating
-    synergies — Sharing without compromising our identity Article on Medium
-    Enter the Lab Drop by, we're hiring. We are an open-minded, open-hearted
-    team that loves the thrill of creating exciting new projects. Drop us a line
-    if you’re passionate and talented to do everything you set your mind to.
-    View careers Legal © 2019 Say hello@significa.co (+351) 226 001 751 Links
-    Home Showcase Services About Careers Labs Contact Network Coletiv Adamant
-    Follow us
+         View services
+    What's new on Significa Labs Automating releases for UI Kits — How to
+    automate release logs and builds for your style guides Tutorial on Medium An
+    iceberg sank the Titanic — But what’s that got to do with text hierarchy?
+    Article on Medium On creating synergies — Sharing without compromising our
+    identity Article on Medium Enter the Lab Drop by, we're hiring. We are an
+    open-minded, open-hearted team that loves the thrill of creating exciting
+    new projects. Drop us a line if you’re passionate and talented to do
+    everything you set your mind to. View careers Legal © 2019 Say
+    hello@significa.co (+351) 226 001 751 Links Home Showcase Services About
+    Careers Labs Contact Network Coletiv Adamant Follow us
   </body>
 </html>
