font size changed, basics done except nav and footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
-   
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -58,10 +57,10 @@
     <section class="container-fluid herostage">
       <div class="jumbotron jumbotron-fluid">
         <div>
-          <h1 class="display-4 col-4">Your go-to digital agency</h1>
+          <h1 id="h1" class="display-4 col-4">Your go-to digital agency</h1>
         </div>
         <div>
-          <h4 class="lead col-6">
+          <h4 id="h4" class="lead col-6">
             Significa is a digital design-led agency mainly focused on Product
             Development.
           </h4>
@@ -69,59 +68,69 @@
       </div>
     </section>
 
-
     <!--Image Teaser 4/4/4-->
     <section class="container-fluid image-teaser">
       <div class="card-group">
         <div class="card">
-          <div class="shadow p-3 mb-5 bg-white rounded" id="delete-padding">    
-          <img src="/images/Oopsie.png" class="card-img-top" alt="...">
+          <div class="shadow mb-5 bg-white rounded">
+            <img src="/images/Oopsie.png" class="card-img-top" alt="..." />
           </div>
           <div class="card-body">
-            <h5 class="card-title">Oopsie for users — Your favourite food, one click away!</h5>
-            <p class="card-text">Business Analysis,
-              Product Management, Consultancy & 5 others</p>
+            <h5 id="h5" class="card-title">
+              Oopsie for users — Your favourite food, one click away!
+            </h5>
+            <p class="card-text">
+              Business Analysis, Product Management, Consultancy & 5 others
+            </p>
           </div>
         </div>
         <div class="card">
-          <img src="/images/Opennode.png" class="card-img-top" alt="...">
+          <div class="shadow mb-5 bg-white rounded">
+            <img src="/images/Opennode.png" class="card-img-top" alt="..." />
+          </div>
           <div class="card-body">
-            <h5 class="card-title">Opencode — Bitcoin, for everyday.</h5>
+            <h5 id="h5" class="card-title">
+              Opencode — Bitcoin, for everyday.
+            </h5>
             <p class="card-text">UI/UX, Front End, Front End</p>
           </div>
         </div>
         <div class="card">
-          <img src="/images/Akasha.png" class="card-img-top" alt="...">
+          <div class="shadow mb-5 bg-white rounded">
+            <img src="/images/Akasha.png" class="card-img-top" alt="..." />
+          </div>
           <div class="card-body">
-            <h5 class="card-title">AKASHA — Open systems to expand our collective
-              mind.</h5>
+            <h5 id="h5" class="card-title">
+              AKASHA — Open systems to expand our collective mind.
+            </h5>
             <p class="card-text">UI/UX, Front End, Illustration</p>
           </div>
         </div>
       </div>
     </section>
-     
-     W
+
+    W
     <!--Textblock 4/8-->
     <section class="container-fluid textblock">
       <div class="jumbotron jumbotron-fluid">
-        <div>
-          <h3 class="display-4 col-4">We build digital products</h3>
+        <div class="col-3">
+          <h3 id="h3" class="display-4">We build digital products</h3>
         </div>
         <div class="col-7">
-          <h4 class="lead col">
-            Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.
-          </h4>
+          <h5 id="h5" class="lead">
+            Having a design-led approach to what we do defines who we are. We
+            take on products from inception to launch, from business model to
+            people's pocket, from wireframe to continuous deployment.
+          </h5>
         </div>
       </div>
-
     </section>
     <!--Text Teaser 4/4/4-->
     <section class="container-fluid text-teaser">
       <div class="card-group">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Strategy</h5>
+            <h5 id="h5" class="card-title">Strategy</h5>
             <ul class="card-text">
               <il> <i>– </i>UX research</il>
               <il> <i>– </i>Business strategy</il>
@@ -133,7 +142,7 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Product design</h5>
+            <h5 id="h5" class="card-title">Product design</h5>
             <ul class="card-text">
               <il> <i>– </i>User experience</il>
               <il> <i>– </i>User interface</il>
@@ -145,7 +154,7 @@
         </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Development</h5>
+            <h5 id="h5" class="card-title">Development</h5>
             <ul class="card-text">
               <il> <i>– </i>Front-end engineering</il>
               <il> <i>– </i>Web-app development</il>
@@ -156,38 +165,132 @@
         </div>
       </div>
       <div class="cta-link">
-        <a href="http://">View services <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
-        </svg>
-        
+        <a href="http://"
+          >View services
+          <svg
+            width="1em"
+            height="1em"
+            viewBox="0 0 16 16"
+            class="bi bi-arrow-right"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+            />
+          </svg>
         </a>
       </div>
     </section>
     <!--Textblock List Black 4/8-->
-    <section class="container-fluid">
-    </section>
+    <div class="background-black">
+      <section class="container-fluid textblock">
+        <div class="jumbotron jumbotron-fluid">
+          <div class="col-3">
+            <h3 id="h3" class="display-4">What's new on Significa Labs</h3>
+          </div>
+          <div class="col-7">
+            <ul id="h5" class="lead">
+              <li>
+                Automating releases for UI Kits — How to automate release logs
+                and builds for your style guides
+              </li>
+              <p>Tutorial on Medium</p>
+              <hr />
+              <li>
+                An iceberg sank the Titanic — But what’s that got to do with
+                text hierarchy?
+              </li>
+              <p>Article on Medium</p>
+              <hr />
+              <li>
+                On creating synergies — Sharing without compromising our
+                identity
+              </li>
+              <p>Article on Medium</p>
+              <hr />
+            </ul>
+            <a href="http://"
+              >Enter the Lab
+              <svg
+                width="1em"
+                height="1em"
+                viewBox="0 0 16 16"
+                class="bi bi-arrow-right"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </section>
+    </div>
     <!--Textblock 4/8-->
-    <sectio class="container-fluid">
+    <section class="container-fluid textblock">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="col-3">
+          <h3 id="h3" class="display-4">Drop by, we're hiring.</h3>
+        </div>
+        <div class="col-7">
+          <h5 id="h5" class="lead">
+            We are an open-minded, open-hearted team that loves the thrill of
+            creating exciting new projects. Drop us a line if you’re passionate
+            and talented to do everything you set your mind to.
+          </h5>
+          <a href="http://"
+            >View careers<svg
+              width="1em"
+              height="1em"
+              viewBox="0 0 16 16"
+              class="bi bi-arrow-right"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+              />
+            </svg>
+          </a>
+        </div>
+      </div>
     </section>
 
     <!--Image Teaser 6/6-->
-    <section class="container-fluid">
-
+    <section class="container-fluid image-teaser">
+      <div class="card-group">
+        <div class="card">
+          <div class="shadow mb-5 bg-white rounded">
+            <img
+              src="/images/Mood table 1.png"
+              class="card-img-top"
+              alt="..."
+            />
+          </div>
+        </div>
+        <div class="card">
+          <div class="shadow mb-5 bg-white rounded">
+            <img src="/images/Mood room 2.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+        <div class="card">
+          <div class="shadow mb-5 bg-white rounded">
+            <img src="/images/Mood team 3.png" class="card-img-top" alt="..." />
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--Footer-->
     <footer></footer>
 
-         View services
-    What's new on Significa Labs Automating releases for UI Kits — How to
-    automate release logs and builds for your style guides Tutorial on Medium An
-    iceberg sank the Titanic — But what’s that got to do with text hierarchy?
-    Article on Medium On creating synergies — Sharing without compromising our
-    identity Article on Medium Enter the Lab Drop by, we're hiring. We are an
-    open-minded, open-hearted team that loves the thrill of creating exciting
-    new projects. Drop us a line if you’re passionate and talented to do
-    everything you set your mind to. View careers Legal © 2019 Say
-    hello@significa.co (+351) 226 001 751 Links Home Showcase Services About
-    Careers Labs Contact Network Coletiv Adamant Follow us
+    Legal © 2019 Say hello@significa.co (+351) 226 001 751 Links Home Showcase
+    Services About Careers Labs Contact Network Coletiv Adamant Follow us
   </body>
 </html>
