fixed header & herostage

--- a/index.html
+++ b/index.html
@@ -40,15 +40,29 @@
   </head>
   <body>
     <header>
-      <img src="/images/logo.svg" alt="Significa-Logo" />
-      <nav class="navbar navbar-fixed-top">
-        <ul>
-          <li>Showcase</li>
-          <li>Services</li>
-          <li>About</li>
-          <li>Careers</li>
-          <li>Labs</li>
-          <li>Contact</li>
+      <div>
+        <img class="nav-item logo" src="/images/logo.svg" alt="Significa-Logo" />
+      </div>
+      <nav>
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Showcase</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Careers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Labs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -57,10 +71,10 @@
     <section class="container-fluid herostage">
       <div class="jumbotron jumbotron-fluid">
         <div>
-          <h1 id="h1" class="display-4 col-4">Your go-to digital agency</h1>
+          <h1 id="h1" class="display-4 col-5">Your go-to digital agency</h1>
         </div>
         <div>
-          <h4 id="h4" class="lead col-6">
+          <h4 id="h4" class="lead col-7">
             Significa is a digital design-led agency mainly focused on Product
             Development.
           </h4>
