added section height

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </header>
 
     <!--Hero 12-->
-    <section class="container-fluid herostage">
+    <section class="container-fluid herostage section-size-l-center">
       <div class="jumbotron jumbotron-fluid">
         <div>
           <h1 id="h1" class="display-4 col-5">Your go-to digital agency</h1>
@@ -83,7 +83,7 @@
     </section>
 
     <!--Image Teaser 4/4/4-->
-    <section class="container-fluid image-teaser">
+    <section class="container-fluid image-teaser section-size-l-center">
       <div class="card-group">
         <div class="card">
           <div class="shadow mb-5 bg-white rounded">
@@ -125,7 +125,7 @@
 
     W
     <!--Textblock 4/8-->
-    <section class="container-fluid textblock">
+    <section class="container-fluid textblock section-size-m-center">
       <div class="jumbotron jumbotron-fluid">
         <div class="col-3">
           <h3 id="h3" class="display-4">We build digital products</h3>
@@ -140,7 +140,7 @@
       </div>
     </section>
     <!--Text Teaser 4/4/4-->
-    <section class="container-fluid text-teaser">
+    <section class="container-fluid text-teaser section-size-m-center">
       <div class="card-group">
         <div class="card">
           <div class="card-body">
@@ -198,7 +198,7 @@
       </div>
     </section>
     <!--Textblock List Black 4/8-->
-    <div class="background-black">
+    <div class="background-black section-size-l-center">
       <section class="container-fluid textblock">
         <div class="jumbotron jumbotron-fluid">
           <div class="col-3">
@@ -246,7 +246,7 @@
       </section>
     </div>
     <!--Textblock 4/8-->
-    <section class="container-fluid textblock">
+    <section class="container-fluid textblock section-size-l-center">
       <div class="jumbotron jumbotron-fluid">
         <div class="col-3">
           <h3 id="h3" class="display-4">Drop by, we're hiring.</h3>
@@ -277,7 +277,7 @@
     </section>
 
     <!--Image Teaser 6/6-->
-    <section class="container-fluid image-teaser">
+    <section class="container-fluid image-teaser section-size-l-center">
       <div class="card-group">
         <div class="card">
           <div class="shadow mb-5 bg-white rounded">
